update project for tx2